--- a/src/gui/src/settings/options-window.ui
+++ b/src/gui/src/settings/options-window.ui
@@ -304,34 +304,27 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="0" colspan="2">
-         <widget class="QCheckBox" name="checkDownloadBlacklisted">
-          <property name="text">
-           <string>Download images containing blacklisted tags</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="0">
+        <item row="6" column="0">
          <widget class="QLabel" name="label_64">
           <property name="text">
            <string>Adds</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="6" column="1">
          <widget class="QLineEdit" name="lineAdd"/>
         </item>
-        <item row="8" column="0">
+        <item row="7" column="0">
          <widget class="QLabel" name="labelGlobalPostFilter">
           <property name="text">
            <string>Post-filters</string>
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="7" column="1">
          <widget class="QLineEdit" name="lineGlobalPostFilter"/>
         </item>
-        <item row="9" column="0" colspan="2">
+        <item row="8" column="0" colspan="2">
          <widget class="QLabel" name="label_65">
           <property name="text">
            <string>&lt;i&gt;These tags and post-filters will be automatically added to every search.&lt;/i&gt;</string>
@@ -341,21 +334,21 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="0" colspan="2">
+        <item row="9" column="0" colspan="2">
          <widget class="QCheckBox" name="checkGlobalPostFilterExplicit">
           <property name="text">
            <string>Explicitely add global post-filter to tab post-filter field</string>
           </property>
          </widget>
         </item>
-        <item row="11" column="0" colspan="2">
+        <item row="10" column="0" colspan="2">
          <widget class="QCheckBox" name="checkConfirmClose">
           <property name="text">
            <string>Ask for confirmation before closing the window</string>
           </property>
          </widget>
         </item>
-        <item row="12" column="0" colspan="2">
+        <item row="11" column="0" colspan="2">
          <widget class="QCheckBox" name="checkSendUsageData">
           <property name="text">
            <string>Send anonymous usage data</string>
@@ -370,7 +363,6 @@
        <zorder>lineWhitelist</zorder>
        <zorder>comboWhitelist</zorder>
        <zorder>label_51</zorder>
-       <zorder>checkDownloadBlacklisted</zorder>
        <zorder>label_63</zorder>
        <zorder>comboStart</zorder>
        <zorder>label_64</zorder>
@@ -2414,6 +2406,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QCheckBox" name="checkDownloadBlacklisted">
+          <property name="text">
+           <string>Download images containing blacklisted tags</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="pageIgnoredTags">
@@ -2886,7 +2885,6 @@
   <tabstop>comboStart</tabstop>
   <tabstop>lineWhitelist</tabstop>
   <tabstop>comboWhitelist</tabstop>
-  <tabstop>checkDownloadBlacklisted</tabstop>
   <tabstop>lineAdd</tabstop>
   <tabstop>spinImagesPerPage</tabstop>
   <tabstop>spinColumns</tabstop>
