Fix quick edit of target directory creating many folders (fix #2085)

--- a/src/gui/src/docks/settings-dock.ui
+++ b/src/gui/src/docks/settings-dock.ui
@@ -191,7 +191,7 @@
    <sender>lineFolder</sender>
    <signal>textEdited(QString)</signal>
    <receiver>SettingsDock</receiver>
-   <slot>save()</slot>
+   <slot>saveSettings()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>120</x>
@@ -209,5 +209,6 @@
   <slot>save()</slot>
   <slot>chooseFolder()</slot>
   <slot>updateCompleters()</slot>
+  <slot>saveSettings()</slot>
  </slots>
 </ui>
