--- a/src/gui/src/sources/sources-settings-window.ui
+++ b/src/gui/src/sources/sources-settings-window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>530</width>
-    <height>273</height>
+    <height>283</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -694,8 +694,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>438</x>
-     <y>262</y>
+     <x>433</x>
+     <y>272</y>
     </hint>
     <hint type="destinationlabel">
      <x>345</x>
@@ -710,12 +710,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>101</x>
-     <y>42</y>
+     <x>112</x>
+     <y>61</y>
     </hint>
     <hint type="destinationlabel">
-     <x>101</x>
-     <y>65</y>
+     <x>112</x>
+     <y>115</y>
     </hint>
    </hints>
   </connection>
@@ -726,8 +726,8 @@
    <slot>testLogin()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>507</x>
-     <y>87</y>
+     <x>509</x>
+     <y>233</y>
     </hint>
     <hint type="destinationlabel">
      <x>273</x>
@@ -742,8 +742,8 @@
    <slot>addCookie()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>101</x>
-     <y>199</y>
+     <x>112</x>
+     <y>233</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
@@ -758,8 +758,8 @@
    <slot>addHeader()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>101</x>
-     <y>199</y>
+     <x>112</x>
+     <y>233</y>
     </hint>
     <hint type="destinationlabel">
      <x>43</x>
@@ -786,16 +786,16 @@
   <connection>
    <sender>comboLoginType</sender>
    <signal>currentIndexChanged(int)</signal>
-   <receiver>stackedCredentials</receiver>
-   <slot>setCurrentIndex(int)</slot>
+   <receiver>SourcesSettingsWindow</receiver>
+   <slot>setLoginType(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>188</x>
-     <y>56</y>
+     <x>496</x>
+     <y>58</y>
     </hint>
     <hint type="destinationlabel">
-     <x>181</x>
-     <y>65</y>
+     <x>526</x>
+     <y>54</y>
     </hint>
    </hints>
   </connection>
