Add basic QML source list

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main-screen.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>SourcesScreen.qml</file>
     </qresource>
 </RCC>
