Use flow layout for QML image results

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -3,7 +3,9 @@
         <file>main-screen.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>components/LogTab.qml</file>
+        <file>components/MainScreen.qml</file>
         <file>components/SearchTab.qml</file>
         <file>components/SourcesScreen.qml</file>
+        <file>vendor/ColumnFlow.qml</file>
     </qresource>
 </RCC>
