--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -7,6 +7,7 @@
         <file>components/MainScreen.qml</file>
         <file>components/SearchTab.qml</file>
         <file>components/SourcesScreen.qml</file>
+        <file>components/ZoomableImage.qml</file>
         <file>vendor/ColumnFlow.qml</file>
     </qresource>
 </RCC>
