--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -5,6 +5,7 @@
         <file>components/ImageScreen.qml</file>
         <file>components/LogTab.qml</file>
         <file>components/MainScreen.qml</file>
+        <file>components/SearchField.qml</file>
         <file>components/SearchTab.qml</file>
         <file>components/SourcesScreen.qml</file>
         <file>components/ZoomableImage.qml</file>
