--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -4,6 +4,7 @@
         <file>qtquickcontrols2.conf</file>
         <file>components/ImageScreen.qml</file>
         <file>components/LogTab.qml</file>
+        <file>components/MainDrawer.qml</file>
         <file>components/MainScreen.qml</file>
         <file>components/SearchField.qml</file>
         <file>components/SearchTab.qml</file>
