Stop using tabs for the main screen

--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -12,5 +12,6 @@
         <file>images/icons/tags.png</file>
         <file>images/icons/image.png</file>
         <file>images/icons/ld.png</file>
+        <file>images/icons/menu.png</file>
     </qresource>
 </RCC>
