Make the setting page actually change settings

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -10,6 +10,7 @@
         <file>components/SearchScreen.qml</file>
         <file>components/settings/CheckBoxSetting.qml</file>
         <file>components/settings/FolderSetting.qml</file>
+        <file>components/settings/Setting.qml</file>
         <file>components/settings/SettingItem.qml</file>
         <file>components/settings/SettingsScreen.qml</file>
         <file>components/settings/TextFieldSetting.qml</file>
