--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -14,5 +14,44 @@
         <file>images/icons/ld.png</file>
         <file>images/icons/menu.png</file>
         <file>images/icons/add.png</file>
+        <file>images/icons/add@2x.png</file>
+        <file>images/icons/add@3x.png</file>
+        <file>images/icons/add@4x.png</file>
+        <file>images/icons/back@2x.png</file>
+        <file>images/icons/back@3x.png</file>
+        <file>images/icons/back@4x.png</file>
+        <file>images/icons/download@2x.png</file>
+        <file>images/icons/download@3x.png</file>
+        <file>images/icons/download@4x.png</file>
+        <file>images/icons/favorites@2x.png</file>
+        <file>images/icons/favorites@3x.png</file>
+        <file>images/icons/favorites@4x.png</file>
+        <file>images/icons/hd@2x.png</file>
+        <file>images/icons/hd@3x.png</file>
+        <file>images/icons/hd@4x.png</file>
+        <file>images/icons/image@2x.png</file>
+        <file>images/icons/image@3x.png</file>
+        <file>images/icons/image@4x.png</file>
+        <file>images/icons/ld@2x.png</file>
+        <file>images/icons/ld@3x.png</file>
+        <file>images/icons/ld@4x.png</file>
+        <file>images/icons/log@2x.png</file>
+        <file>images/icons/log@3x.png</file>
+        <file>images/icons/log@4x.png</file>
+        <file>images/icons/menu@2x.png</file>
+        <file>images/icons/menu@3x.png</file>
+        <file>images/icons/menu@4x.png</file>
+        <file>images/icons/search@2x.png</file>
+        <file>images/icons/search@3x.png</file>
+        <file>images/icons/search@4x.png</file>
+        <file>images/icons/settings@2x.png</file>
+        <file>images/icons/settings@3x.png</file>
+        <file>images/icons/settings@4x.png</file>
+        <file>images/icons/share@2x.png</file>
+        <file>images/icons/share@3x.png</file>
+        <file>images/icons/share@4x.png</file>
+        <file>images/icons/tags@2x.png</file>
+        <file>images/icons/tags@3x.png</file>
+        <file>images/icons/tags@4x.png</file>
     </qresource>
 </RCC>
