Add setting to change interface language

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -18,5 +18,6 @@
         <file>components/SourcesScreen.qml</file>
         <file>components/ZoomableImage.qml</file>
         <file>vendor/ColumnFlow.qml</file>
+        <file>components/settings/ComboSetting.qml</file>
     </qresource>
 </RCC>
