Add basic source settings screen

--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -53,5 +53,9 @@
         <file>images/icons/tags@2x.png</file>
         <file>images/icons/tags@3x.png</file>
         <file>images/icons/tags@4x.png</file>
+        <file>images/icons/edit.png</file>
+        <file>images/icons/edit@2x.png</file>
+        <file>images/icons/edit@3x.png</file>
+        <file>images/icons/edit@4x.png</file>
     </qresource>
 </RCC>
