Improve looks of the settings page

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -20,5 +20,6 @@
         <file>vendor/ColumnFlow.qml</file>
         <file>components/settings/ComboSetting.qml</file>
         <file>components/settings/SourceSettingsScreen.qml</file>
+        <file>components/settings/SettingTitle.qml</file>
     </qresource>
 </RCC>
