--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -21,5 +21,6 @@
         <file>components/settings/ComboSetting.qml</file>
         <file>components/settings/SourceSettingsScreen.qml</file>
         <file>components/settings/SettingTitle.qml</file>
+        <file>components/settings/LinkSettingItem.qml</file>
     </qresource>
 </RCC>
