--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -24,5 +24,7 @@
         <file>components/settings/LinkSettingItem.qml</file>
         <file>components/settings/SpinBoxSetting.qml</file>
         <file>components/settings/Settings.qml</file>
+        <file>components/settings/TextAreaSetting.qml</file>
+        <file>components/settings/SettingBlacklist.qml</file>
     </qresource>
 </RCC>
