Add support for GIF and video in QML viewer

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -25,5 +25,6 @@
         <file>components/settings/SpinBoxSetting.qml</file>
         <file>components/settings/Settings.qml</file>
         <file>components/settings/TextAreaSetting.qml</file>
+        <file>components/VideoPlayer.qml</file>
     </qresource>
 </RCC>
