--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -73,5 +73,13 @@
         <file>images/icons/network@2x.png</file>
         <file>images/icons/network@3x.png</file>
         <file>images/icons/network@4x.png</file>
+        <file>images/icons/pause.png</file>
+        <file>images/icons/pause@2x.png</file>
+        <file>images/icons/pause@3x.png</file>
+        <file>images/icons/pause@4x.png</file>
+        <file>images/icons/play.png</file>
+        <file>images/icons/play@2x.png</file>
+        <file>images/icons/play@3x.png</file>
+        <file>images/icons/play@4x.png</file>
     </qresource>
 </RCC>
