--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -81,5 +81,9 @@
         <file>images/icons/play@2x.png</file>
         <file>images/icons/play@3x.png</file>
         <file>images/icons/play@4x.png</file>
+        <file>images/icons/palette.png</file>
+        <file>images/icons/palette@2x.png</file>
+        <file>images/icons/palette@3x.png</file>
+        <file>images/icons/palette@4x.png</file>
     </qresource>
 </RCC>
