Use combobox for settings with many values

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -32,5 +32,6 @@
         <file>components/settings/items/SpinBoxSetting.qml</file>
         <file>components/settings/items/TextAreaSetting.qml</file>
         <file>components/settings/items/TextFieldSetting.qml</file>
+        <file>components/settings/items/RadioSetting.qml</file>
     </qresource>
 </RCC>
