--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -85,5 +85,13 @@
         <file>images/icons/palette@2x.png</file>
         <file>images/icons/palette@3x.png</file>
         <file>images/icons/palette@4x.png</file>
+        <file>images/icons/next.png</file>
+        <file>images/icons/next@2x.png</file>
+        <file>images/icons/next@3x.png</file>
+        <file>images/icons/next@4x.png</file>
+        <file>images/icons/previous.png</file>
+        <file>images/icons/previous@2x.png</file>
+        <file>images/icons/previous@3x.png</file>
+        <file>images/icons/previous@4x.png</file>
     </qresource>
 </RCC>
