Add more layout settings for QML results

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -33,5 +33,6 @@
         <file>components/settings/items/TextAreaSetting.qml</file>
         <file>components/settings/items/TextFieldSetting.qml</file>
         <file>components/settings/items/RadioSetting.qml</file>
+        <file>components/ResultsView.qml</file>
     </qresource>
 </RCC>
