--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -34,5 +34,6 @@
         <file>components/settings/items/TextFieldSetting.qml</file>
         <file>components/settings/items/RadioSetting.qml</file>
         <file>components/ResultsView.qml</file>
+        <file>components/settings/pages/SourcesSettingsPage.qml</file>
     </qresource>
 </RCC>
