--- a/src/gui-qml/resources/resources.qrc
+++ b/src/gui-qml/resources/resources.qrc
@@ -101,5 +101,9 @@
         <file>images/icons/remove@2x.png</file>
         <file>images/icons/remove@3x.png</file>
         <file>images/icons/remove@4x.png</file>
+        <file>images/icons/favorites_filled.png</file>
+        <file>images/icons/favorites_filled@2x.png</file>
+        <file>images/icons/favorites_filled@3x.png</file>
+        <file>images/icons/favorites_filled@4x.png</file>
     </qresource>
 </RCC>
