Add import/export of settings.ini file for QML

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -38,5 +38,6 @@
         <file>components/SearchEdit.qml</file>
         <file>components/FavoritesScreen.qml</file>
         <file>components/AutoCompleteSearchEdit.qml</file>
+        <file>components/settings/pages/AdvancedSettingsPage.qml</file>
     </qresource>
 </RCC>
