--- a/docs/_layouts/index.html
+++ b/docs/_layouts/index.html
@@ -17,7 +17,9 @@ class: index
 			<p class="description">{{ site.description | default: site.github.project_tagline }}</p>
 
 			{% if site.show_download %}
-				<p class="download"><a href="{{ site.github.releases_url | append: '/latest' }}" data-label="Download">Free Download</a></p>
+				<p class="download"><a href="{{ site.github.releases_url | append: '/latest' }}" data-label="Download">
+					Free download - {{ site.github.latest_release.name }}
+				</a></p>
 			{% endif %}
 			<p class="view"><a href="{{ site.github.repository_url }}" data-label="GitHub project">View the Project on GitHub</a></p>
 		</div>
