--- a/src/gui/src/monitor-window.ui
+++ b/src/gui/src/monitor-window.ui
@@ -169,9 +169,6 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="lineDownloadPathOverride"/>
-       </item>
        <item row="2" column="0">
         <widget class="QLabel" name="labelDownloadFilenameOverride">
          <property name="text">
@@ -195,6 +192,26 @@
           <string>Download blacklisted images</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0">
+         <item>
+          <widget class="QLineEdit" name="lineDownloadPathOverride"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonDownloadPathOverride">
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string notr="true">...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -264,8 +281,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>buttonDownloadPathOverride</sender>
+   <signal>clicked()</signal>
+   <receiver>MonitorWindow</receiver>
+   <slot>chooseDownloadPathOverride()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>370</x>
+     <y>82</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>85</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>openSourcesWindow()</slot>
+  <slot>chooseDownloadPathOverride()</slot>
  </slots>
 </ui>
