--- a/src/gui/src/favorite-window.ui
+++ b/src/gui/src/favorite-window.ui
@@ -211,11 +211,28 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QLineEdit" name="linePathOverride"/>
-       </item>
        <item row="5" column="1">
         <widget class="QLineEdit" name="lineFilenameOverride"/>
+       </item>
+       <item row="4" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLineEdit" name="linePathOverride"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonPathOverride">
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -309,9 +326,26 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>buttonPathOverride</sender>
+   <signal>clicked()</signal>
+   <receiver>FavoriteWindow</receiver>
+   <slot>choosePathOverride()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>367</x>
+     <y>155</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>156</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>removeFavorite()</slot>
   <slot>openSourcesWindow()</slot>
+  <slot>choosePathOverride()</slot>
  </slots>
 </ui>
