Use color picker for primary/accent settings in QML

--- a/src/gui-qml/src/qml.qrc
+++ b/src/gui-qml/src/qml.qrc
@@ -39,5 +39,7 @@
         <file>components/FavoritesScreen.qml</file>
         <file>components/AutoCompleteSearchEdit.qml</file>
         <file>components/settings/pages/AdvancedSettingsPage.qml</file>
+        <file>components/settings/items/ColorSetting.qml</file>
+        <file>components/settings/items/MaterialColorSetting.qml</file>
     </qresource>
 </RCC>
